Changes made to meet requirements from part 1